--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 		<title>Todo Vanilla Js</title>
 	</head>
 	<body></body>
-	<script src="script.js"></script>
+	<script src="./dist/script.js"></script>
 </html>
