adicionei a função de adicionar tarefas

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 		<link rel="stylesheet" href="styles.css" />
 		<title>Todo Vanilla Js</title>
 	</head>
-	<body></body>
+	<body>
+		<main>
+			<ul></ul>
+			<input type="text" id="todo" />
+			<button onclick="addTodo(todoName.value)">Adicionar Tarefa</button>
+		</main>
+	</body>
 	<script src="./dist/script.js"></script>
 </html>
