adicionei armazenamento nas tarefas

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 			<button onclick="addTodo(todoName.value)" id="addButton">
 				Adicionar Tarefa
 			</button>
-			<button onclick="clearTodos()" id="clearButton">
-				Remover Tarefas Completadas
-			</button>
+			<button id="clear-button">Remover Tarefas Completadas</button>
 		</main>
 	</body>
 	<script src="./dist/script.js"></script>
